Checks shows in all auditoriums of cinema hall for a movie id